Fix wrap of menu

--- a/content/styles/_customstyles.scss
+++ b/content/styles/_customstyles.scss
@@ -88,8 +88,8 @@ h4 small { font-size: $baseFontSize; }
 
 .navbar .nav > li > a {
   padding-bottom: 5px;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 11px;
+  padding-right: 11px;
 }
 
 .navbar .nav > li > a.active,
